[package]
name = "cplat"
version = "0.1.0"
authors = ["Boyi Yao <boyiyao1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "cargo"] }
directories = "5.0.1"
exitcode = "1.1.2"
